@@ -20,7 +20,6 @@
         <file>images/OnZoomYScale.png</file>
         <file>images/OnStabView.png</file>
         <file>images/OnRootLocus.png</file>
-        <file>images/xflr5_64.png</file>
         <file>images/OnYView.png</file>
         <file>images/OnXView.png</file>
         <file>images/OnZView.png</file>
